--- a/Pradict/www/index.html
+++ b/Pradict/www/index.html
@@ -44,6 +44,14 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+		<script type="text/javascript">
+			function getMyUi(myDeviceToken){
+				if(flag){
+					document.getElementById('container-frame').src = 'http://app.pradict.com/index.php?id=1&devId='+myDeviceToken;
+					flag = false;
+				}
+			}	
+		</script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
